# cubepp

./: .gitignore  README.md  pyproject.toml
cubepp/: main.py
cubepp/resources/: .clang-format  .envrc
cubepp/resources/app/include/projectname/: main_exec.h
cubepp/resources/app/src/: main_exec.cc
cubepp/resources/scripts/: build  clang-format  clean  format  upload
