[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "cubepp"
version = "0.1.1"
description = "Automatically setup CUBE MX project to use C++"
authors = [{ name = "Yuta Fujiyama" }]
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }

[project.scripts]
cubepp = "cubepp.main:main"

[tool.setuptools.packages.find]
where = ["."]